# projectkittythemes

./: .gitignore  CONTRIBUTING.md  README.md  contributing.md  index.html  pyproject.toml  readme.md
categories/: dark.md  high-contrast.md  pastel.md
linux/: README.md  install.sh  preview.sh
src/projectkittythemes/: __init__.py  __main__.py  cli.py  installer.py  themes.py
src/projectkittythemes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
themes/ayu-dark/: windows-terminal.json
themes/ayu-light/: alacritty.toml  wezterm.lua
themes/catppuccin-latte/: alacritty.toml  theme.json
themes/catppuccin-mocha/: kitty.conf  theme.json  wezterm.lua  windows-terminal.json
themes/dracula/: alacritty.toml  kitty.conf  wezterm.lua  windows-terminal.json
themes/gruvbox-dark/: kitty.conf  theme.json
themes/gruvbox-material/: windows-terminal.json
themes/iceberg/: alacritty.toml  theme.json
themes/material-theme/: alacritty.toml  kitty.conf  theme.json  wezterm.lua  windows-terminal.json
themes/monokai-pro/: alacritty.toml  kitty.conf  theme.json  windows-terminal.json
themes/night-owl/: alacritty.toml  theme.json  wezterm.lua
themes/nightball/: kitty.conf  theme.json  wezterm.lua
themes/nord/: alacritty.toml  kitty.conf  theme.json  wezterm.lua
themes/one-dark-pro/: alacritty.toml  kitty.conf  theme.json  windows-terminal.json
themes/palenight/: theme.json  wezterm.lua  windows-terminal.json
themes/rose-pine/: kitty.conf  theme.json  (+2 more)
web/: index.html
windows/: ProjectKittyThemes.rc  README.md  install.ps1
(+44 files in other folders)
